--- a/mcp-config.json
+++ b/mcp-config.json
@@ -10,8 +10,8 @@
     },
     "chrome-devtools": {
       "type": "stdio",
-      "command": "npx",
-      "args": ["-y", "chrome-devtools-mcp@latest", "--browserUrl", "${CHROME_CDP_URL}", "--no-usage-statistics"]
+      "command": "node",
+      "args": ["node_modules/.bin/chrome-devtools-mcp", "--browserUrl", "${CHROME_CDP_URL}", "--no-usage-statistics"]
     }
   }
 }
