--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@modelcontextprotocol/sdk": "^1.0.0",
     "@shoelace-style/shoelace": "^2.20.1",
     "chrome-devtools-mcp": "^0.17.0",
+    "dompurify": "^3.3.1",
     "grammy": "^1.35.0",
     "highlight.js": "^11.11.1",
     "hono": "^4.7.0",
@@ -35,9 +36,11 @@
   },
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^6.2.4",
+    "@types/dompurify": "^3.0.5",
     "@types/node": "^20.0.0",
     "@types/pg": "^8.11.0",
     "@types/ws": "^8.5.0",
+    "msw": "^2.12.10",
     "svelte-check": "^4.4.0",
     "tsx": "^4.21.0",
     "typescript": "^5.7.0",
