feat: MCP server infrastructure, ask-user bridge, and agent hooks
Backend:
- MCP server config resolves env vars from DB config + process.env
- Resolve bare module names (tsx) to absolute paths for SDK compatibility
- Agent hooks block built-in AskUserQuestion, redirect to MCP ask_user tool
- ask-user bridge: MCP process → HTTP → WebSocket → frontend → answer back
- Protocol: add AskUserEvent and UserAnswer message types
- Store: guard getConfig against missing DB connection (test safety)

Frontend:
- AskUser.svelte: interactive question component with options + text input
- Protocol types: add AskUserEvent and UserAnswer client types
- OverviewDashboard: updates for repo display

Tests:
- ask-user integration test: full event flow via WebSocket
- MCP flows test: tool execution and event propagation
- MCP server test: server initialization and tool availability

Co-Authored-By: Gigi <gigi@ideabile.com>

--- a/mcp-config.json
+++ b/mcp-config.json
@@ -5,7 +5,10 @@
       "command": "node",
       "args": ["--import", "tsx", "lib/core/mcp.ts"],
       "env": {
-        "DATABASE_URL": "${DATABASE_URL}"
+        "DATABASE_URL": "${DATABASE_URL}",
+        "GITEA_URL": "${GITEA_URL}",
+        "GITEA_TOKEN": "${GITEA_TOKEN}",
+        "PORT": "${PORT}"
       }
     },
     "chrome-devtools": {
