ci: build image in action runner and push to Gitea registry
Remove SSH-based remote build on cluster. The action runner is ARM64,
so we can build directly and push to the Gitea container registry
(prod.gigi.local/gitea/gigi/gigi) instead of building on worker-0.

Changes:
- Build and tag image locally in the runner
- Login to Gitea registry and push image
- Deploy uses --with-registry-auth so swarm nodes can pull
- Updated .env.example to reflect new registry path

Requires new secrets: REGISTRY_USER, REGISTRY_PASSWORD

Co-Authored-By: Gigi <gigi@ideabile.com>

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
-# Docker Registry Configuration
-REGISTRY=192.168.1.80:3000
-IMAGE=idea/gigi
+# Docker Registry Configuration (Gitea container registry)
+REGISTRY=prod.gigi.local/gitea
+IMAGE=gigi/gigi
 TAG=latest
 
 # Database Configuration
