ci: use GITEA_TOKEN for registry login instead of separate secrets
Reuse the existing GITEA_TOKEN secret for docker login to the Gitea
container registry — no need for separate REGISTRY_USER/PASSWORD secrets.

Co-Authored-By: Gigi <gigi@ideabile.com>

--- a/.gitea/workflows/build.yaml
+++ b/.gitea/workflows/build.yaml
@@ -25,8 +25,8 @@ jobs:
 
       - name: Login to Gitea registry
         run: |
-          echo "${{ secrets.REGISTRY_PASSWORD }}" | docker login ${{ env.REGISTRY }} \
-            -u "${{ secrets.REGISTRY_USER }}" --password-stdin
+          echo "${{ secrets.GITEA_TOKEN }}" | docker login ${{ env.REGISTRY }} \
+            -u gigi-admin --password-stdin
 
       - name: Build Docker image
         run: |
