ci: use REGISTRY_TOKEN secret (GITEA_TOKEN is reserved)
GITEA_TOKEN is a reserved name in Gitea Actions, so use REGISTRY_TOKEN
instead. Added the secret at org level (gigi) with the existing token.

Co-Authored-By: Gigi <gigi@ideabile.com>

--- a/.gitea/workflows/build.yaml
+++ b/.gitea/workflows/build.yaml
@@ -25,7 +25,7 @@ jobs:
 
       - name: Login to Gitea registry
         run: |
-          echo "${{ secrets.GITEA_TOKEN }}" | docker login ${{ env.REGISTRY }} \
+          echo "${{ secrets.REGISTRY_TOKEN }}" | docker login ${{ env.REGISTRY }} \
             -u gigi-admin --password-stdin
 
       - name: Build Docker image
