fix: registry path and browser proxy cleanup
- Fix REGISTRY to prod.gigi.local (not /gitea subpath) for Docker push
- Simplify /api/browser/status for selenium noVNC (self-contained viewer)
- Remove /browser/* Hono proxy (Caddy routes directly to browser:7900)

Co-Authored-By: Gigi <gigi@ideabile.com>

--- a/.gitea/workflows/build.yaml
+++ b/.gitea/workflows/build.yaml
@@ -4,7 +4,7 @@ on:
     branches: [main]
 
 env:
-  REGISTRY: prod.gigi.local/gitea
+  REGISTRY: prod.gigi.local
   IMAGE: gigi/gigi
   DEPLOY_HOST: 192.168.1.110
   SSH_OPTS: "-i ~/.ssh/id_ed25519 -o StrictHostKeyChecking=accept-new"
