--- a/Dockerfile.aio
+++ b/Dockerfile.aio
@@ -89,7 +89,7 @@ RUN chown -R gigi:gigi /app
 
 EXPOSE 3000 6080
 
-HEALTHCHECK --interval=10s --timeout=5s --retries=3 \
+HEALTHCHECK --interval=15s --timeout=5s --start-period=120s --retries=3 \
   CMD curl -f http://localhost:3000/health || exit 1
 
 CMD ["/aio-entrypoint.sh"]
