fix: add gitea_org config to Postgres + noVNC index.html
- Write gitea_org to Postgres config during init so the app
  finds org "idea" instead of falling back to hardcoded "gigi"
- Symlink vnc.html as index.html so /browser/ serves noVNC
  instead of a directory listing

Co-Authored-By: Gigi <gigi@ideabile.com>

--- a/Dockerfile.aio
+++ b/Dockerfile.aio
@@ -50,7 +50,8 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
     # Docker CLI (for runner-worker image build)
     docker.io \
     && rm -rf /var/lib/apt/lists/* \
-    && rm -f /etc/nginx/sites-enabled/default
+    && rm -f /etc/nginx/sites-enabled/default \
+    && ln -sf /usr/share/novnc/vnc.html /usr/share/novnc/index.html
 
 # Install Claude Code CLI
 RUN curl -fsSL https://claude.ai/install.sh | bash \
