--- a/Dockerfile.aio
+++ b/Dockerfile.aio
@@ -88,7 +88,7 @@ COPY runner-worker/Dockerfile /opt/runner-worker/Dockerfile
 
 RUN chown -R gigi:gigi /app
 
-EXPOSE 3000 6080
+EXPOSE 2222 3000 6080
 
 HEALTHCHECK --interval=15s --timeout=5s --start-period=120s --retries=3 \
   CMD curl -f http://localhost:3000/health || exit 1
