fix: use -p flag for docker login (no TTY in runner)
Co-Authored-By: Gigi <gigi@ideabile.com>

--- a/.gitea/workflows/build.yaml
+++ b/.gitea/workflows/build.yaml
@@ -25,8 +25,8 @@ jobs:
 
       - name: Login to Gitea registry
         run: |
-          echo "${{ secrets.REGISTRY_TOKEN }}" | docker login ${{ env.REGISTRY }} \
-            -u gigi-admin --password-stdin
+          docker login ${{ env.REGISTRY }} \
+            -u gigi-admin -p "${{ secrets.REGISTRY_TOKEN }}"
 
       - name: Build AIO image
         run: |
