--- a/Dockerfile.aio
+++ b/Dockerfile.aio
@@ -42,7 +42,7 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
     # Chrome + display
     chromium xvfb x11vnc novnc websockify \
     # Networking & tools
-    nginx supervisor git ssh postgresql-client \
+    nginx supervisor git ssh postgresql-client jq \
     # Chrome dependencies
     libnss3 libnspr4 libatk1.0-0 libatk-bridge2.0-0 libcups2 libdrm2 \
     libxkbcommon0 libxcomposite1 libxdamage1 libxfixes3 libxrandr2 libgbm1 \
