feat(backup): add git-mirror backup system with mTLS to git.lab.local
Implements configurable backup system (issue #14):
- Backup module (lib/backup/) with config loader, scheduler, mirror engine, and source resolver
- mTLS support for both git operations (GIT_SSL_*) and fetch() API calls (https.Agent)
- Org-wide source resolution via Gitea API with pagination
- Scheduled mirroring (default 6h) + manual trigger API
- Auto-creates target org and repos on backup Gitea
- Config via gigi.config.yaml with ${ENV_VAR:-default} interpolation
- Boot integration: initBackup() in src/index.ts, stopScheduler on shutdown
- API endpoints: GET /api/backup/status, POST /api/backup/trigger
- docker-compose.yml: backup env vars + cert volume mount + NODE_EXTRA_CA_CERTS
- Handles cert values as both file paths and inline PEM content

Closes #14

Co-Authored-By: Gigi <gigi@ideabile.com>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -55,11 +55,21 @@ services:
       NEKO_PASSWORD: ${NEKO_PASSWORD:-neko}
       WS_PORT: 3001
       DATABASE_URL: ${DATABASE_URL}
+      # Backup system — git mirror to git.lab.local
+      BACKUP_GITEA_URL: ${BACKUP_GITEA_URL:-https://git.lab.local}
+      BACKUP_AUTH_METHOD: ${BACKUP_AUTH_METHOD:-mtls}
+      BACKUP_GITEA_TOKEN: ${BACKUP_GITEA_TOKEN:-}
+      BACKUP_INTERVAL: ${BACKUP_INTERVAL:-6h}
+      BACKUP_MTLS_CERT: ${BACKUP_MTLS_CERT:-/certs/backup/client-cert.pem}
+      BACKUP_MTLS_KEY: ${BACKUP_MTLS_KEY:-/certs/backup/client-key.pem}
+      BACKUP_MTLS_CA: ${BACKUP_MTLS_CA:-/certs/backup/ca-cert.pem}
+      NODE_EXTRA_CA_CERTS: ${BACKUP_MTLS_CA:-/certs/backup/ca-cert.pem}
     ports:
       - "3100:3000"
       - "3101:3001"
     volumes:
       - workspace:/workspace
+      - ${BACKUP_CERTS_DIR:-./certs/backup}:/certs/backup:ro
     networks:
       - gigi-network
       - databases_default
