fix: copy gigi.config.yaml into AIO Docker image
The backup system couldn't find its configuration because the config
file wasn't being copied into the container image.

Co-Authored-By: Gigi <gigi@ideabile.com>

--- a/Dockerfile.aio
+++ b/Dockerfile.aio
@@ -74,6 +74,7 @@ COPY src/ src/
 COPY lib/ lib/
 COPY web/ web/
 COPY mcp-config.json ./
+COPY gigi.config.yaml ./
 COPY gitea/ gitea/
 COPY scripts/entrypoint.sh scripts/
 
