--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "dev:server": "node --import tsx --watch src/index.ts",
     "build": "vite build --config vite.config.ts",
     "typecheck": "tsc --noEmit",
-    "test": "node --test tests/**/*.test.js src/**/*.test.js",
-    "test:watch": "node --test --watch tests/**/*.test.js src/**/*.test.js",
+    "test": "node --import tsx --test tests/**/*.test.ts tests/**/*.test.js src/**/*.test.js",
+    "test:watch": "node --import tsx --test --watch tests/**/*.test.ts tests/**/*.test.js src/**/*.test.js",
     "test:ci": "node scripts/test-runner.js"
   },
   "dependencies": {
