cleanup: scrub personal references from codebase
Remove all personal names, private IPs, internal domains, and
infrastructure-specific references to prepare for open-source publishing.

- Replace "Mauro" with "the operator" throughout system prompts, docs, tools
- Replace all 192.168.x.x IPs with localhost:3300 or env var defaults
- Replace *.cluster.local, *.gigi.local, *.gigi.casa with generic examples
- Replace idea-biancifiore service names with env-configurable defaults
- Replace git.lab.local backup refs with env-configurable placeholders
- Replace TuringPi cluster references with generic descriptions
- Replace hardcoded admin user "mauro" with "admin" in all configs
- Replace test fixture usernames with "testuser"
- Make CI workflows use secrets instead of hardcoded values
- Make Caddyfile fully env-configurable with sensible defaults
- Update package.json description to be generic

Closes #65

Co-Authored-By: Gigi <gigi@ideabile.com>

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 # Docker Registry Configuration (Gitea container registry)
-REGISTRY=prod.gigi.local/gitea
+REGISTRY=localhost:3000/gitea
 IMAGE=gigi/gigi
 TAG=latest
 
@@ -11,12 +11,12 @@ NEKO_PASSWORD=neko
 NEKO_ADMIN_PASSWORD=admin
 NEKO_SCREEN=1920x1080@30
 # CRITICAL: Set this to the external IP/hostname where neko is accessible for WebRTC
-NEKO_NAT1TO1=192.168.1.80
+NEKO_NAT1TO1=your-host-ip
 
 # Browser Mode Configuration
 BROWSER_MODE=neko
 
 # Vite Dev Proxy (for local frontend development)
 # Point these to the live Gigi app to develop against real data
-# GIGI_API_URL=http://192.168.1.80:3100
-# GIGI_WS_URL=ws://192.168.1.80:3101
+# GIGI_API_URL=http://localhost:3100
+# GIGI_WS_URL=ws://localhost:3101
