--- a/.env.local.example
+++ b/.env.local.example
@@ -23,8 +23,8 @@
 #
 
 # Gitea admin user (created automatically)
-ADMIN_USER=mauro
-ADMIN_EMAIL=mauro@localhost
+ADMIN_USER=admin
+ADMIN_EMAIL=admin@localhost
 ADMIN_PASSWORD=admin
 
 # Gitea organization name
