--- a/.gitea/workflows/build.yaml
+++ b/.gitea/workflows/build.yaml
@@ -4,9 +4,9 @@ on:
     branches: [main]
 
 env:
-  REGISTRY: prod.gigi.local
+  REGISTRY: ${{ secrets.REGISTRY_HOST || 'localhost:3000' }}
   IMAGE: gigi/gigi
-  DEPLOY_HOST: 192.168.1.110
+  DEPLOY_HOST: ${{ secrets.DEPLOY_HOST }}
   SSH_OPTS: "-i ~/.ssh/id_ed25519 -o StrictHostKeyChecking=accept-new"
 
 jobs:
@@ -26,7 +26,7 @@ jobs:
       - name: Login to Gitea registry
         run: |
           docker login ${{ env.REGISTRY }} \
-            -u gigi-admin -p "${{ secrets.REGISTRY_TOKEN }}"
+            -u ${{ secrets.REGISTRY_USER || 'gigi-admin' }} -p "${{ secrets.REGISTRY_TOKEN }}"
 
       - name: Build AIO image
         run: |
@@ -42,13 +42,13 @@ jobs:
 
       - name: Deploy dev
         run: |
-          ssh $SSH_OPTS m@${{ env.DEPLOY_HOST }} "
+          ssh $SSH_OPTS ${{ secrets.DEPLOY_USER }}@${{ env.DEPLOY_HOST }} "
             sudo docker service update \
               --image ${{ env.REGISTRY }}/${{ env.IMAGE }}:${{ github.sha }} \
-              --with-registry-auth gigi-dev_gigi"
+              --with-registry-auth ${{ secrets.DEV_STACK_NAME || 'gigi-dev' }}_gigi"
 
       - name: Verify dev health
         run: |
           sleep 30
-          ssh $SSH_OPTS m@${{ env.DEPLOY_HOST }} \
+          ssh $SSH_OPTS ${{ secrets.DEPLOY_USER }}@${{ env.DEPLOY_HOST }} \
             "curl -sf http://localhost:3000/health" || echo "Health check pending"
