--- a/docker-compose.local.yml
+++ b/docker-compose.local.yml
@@ -81,8 +81,8 @@ services:
         condition: service_healthy
     environment:
       GITEA_URL: http://gitea:3000
-      ADMIN_USER: ${ADMIN_USER:-mauro}
-      ADMIN_EMAIL: ${ADMIN_EMAIL:-mauro@localhost}
+      ADMIN_USER: ${ADMIN_USER:-admin}
+      ADMIN_EMAIL: ${ADMIN_EMAIL:-admin@localhost}
       ADMIN_PASSWORD: ${ADMIN_PASSWORD:-admin}
       ORG_NAME: ${ORG_NAME:-idea}
       TELEGRAM_TOKEN: ${TELEGRAM_TOKEN:-}
