--- a/Caddyfile
+++ b/Caddyfile
@@ -1,8 +1,16 @@
-browser.cluster.local {
-	reverse_proxy idea-biancifiore-gigi_gigi-neko:8080
+# Gigi Caddyfile — Example configuration
+# Replace hostnames and service names with your deployment values.
+#
+# Required DNS entries (or use env var overrides):
+#   BROWSER_DOMAIN → browser host
+#   GIGI_DOMAIN    → main Gigi host
+#   NEKO_DOMAIN    → Neko browser host (if using Neko)
+
+{$BROWSER_DOMAIN:browser.localhost} {
+	reverse_proxy {$GIGI_SERVICE:gigi_gigi-neko}:8080
 }
 
-claude.cluster.local {
+{$GIGI_DOMAIN:gigi.localhost} {
 	# Gitea UI proxy (iframe embedding) — routed through Hono which handles auth + prefix stripping
 	# (no separate Caddy→Gitea route needed; Hono's /gitea/* handler does it)
 
@@ -12,14 +20,14 @@ claude.cluster.local {
 		header Connection *Upgrade*
 		header Upgrade websocket
 	}
-	reverse_proxy @browserws idea-biancifiore-gigi_gigi:3001
+	reverse_proxy @browserws {$GIGI_SERVICE:gigi_gigi}:3001
 
 	# Ensure SSE/EventSource works properly
 	@sse {
 		path /api/events
 	}
 	handle @sse {
-		reverse_proxy idea-biancifiore-gigi_gigi:3000 {
+		reverse_proxy {$GIGI_SERVICE:gigi_gigi}:3000 {
 			# Disable buffering for SSE
 			flush_interval -1
 			# Long timeout for persistent connections
@@ -31,27 +39,27 @@ claude.cluster.local {
 	}
 
 	# Main application (all other requests)
-	reverse_proxy idea-biancifiore-gigi_gigi:3000 {
+	reverse_proxy {$GIGI_SERVICE:gigi_gigi}:3000 {
 		# Flush immediately for potential streaming responses
 		flush_interval -1
 	}
 }
 
-neko.cluster.local {
+{$NEKO_DOMAIN:neko.localhost} {
 	# WebRTC signaling endpoint
 	@webrtc {
 		path /api/ws
 		header Connection *Upgrade*
 		header Upgrade websocket
 	}
-	reverse_proxy @webrtc idea-biancifiore-gigi_neko:8080
+	reverse_proxy @webrtc {$GIGI_SERVICE:gigi_neko}:8080
 
 	# ICE candidates and session management
 	@api {
 		path /api/*
 	}
-	reverse_proxy @api idea-biancifiore-gigi_neko:8080
+	reverse_proxy @api {$GIGI_SERVICE:gigi_neko}:8080
 
 	# Static assets and main application
-	reverse_proxy idea-biancifiore-gigi_neko:8080
+	reverse_proxy {$GIGI_SERVICE:gigi_neko}:8080
 }
