--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
       NEKO_PASSWORD_ADMIN: ${NEKO_ADMIN_PASSWORD:-admin}
       NEKO_EPR: 52000-52100
       NEKO_ICELITE: 1
-      NEKO_NAT1TO1: ${NEKO_NAT1TO1:-192.168.1.80}
+      NEKO_NAT1TO1: ${NEKO_NAT1TO1:-}
       NEKO_ICESERVERS: '[{"urls":["stun:stun.l.google.com:19302"]},{"urls":["stun:stun1.l.google.com:19302"]}]'
       NEKO_VIDEO_CODEC: h264
       NEKO_VIDEO_BITRATE: 5000
@@ -55,8 +55,8 @@ services:
       NEKO_PASSWORD: ${NEKO_PASSWORD:-neko}
       WS_PORT: 3001
       DATABASE_URL: ${DATABASE_URL}
-      # Backup system — git mirror to git.lab.local
-      BACKUP_GITEA_URL: ${BACKUP_GITEA_URL:-https://git.lab.local}
+      # Backup system — git mirror to secondary Gitea (optional)
+      BACKUP_GITEA_URL: ${BACKUP_GITEA_URL:-}
       BACKUP_AUTH_METHOD: ${BACKUP_AUTH_METHOD:-mtls}
       BACKUP_GITEA_TOKEN: ${BACKUP_GITEA_TOKEN:-}
       BACKUP_INTERVAL: ${BACKUP_INTERVAL:-6h}
