--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "gigi",
   "version": "0.1.0",
-  "description": "Persistent AI coordinator for the TuringPi cluster",
+  "description": "Persistent AI coordinator — self-hosted agent with Gitea, browser, and Telegram integration",
   "type": "module",
   "main": "src/index.ts",
   "scripts": {
