Remove all Neko references — we use our own Chrome container with CDP
Neko (m1k1o/neko) was the original browser solution but has been fully
replaced by our custom Chrome container accessed via Chrome DevTools
Protocol MCP server. This commit removes ~80 Neko references across
the codebase:

- Remove gigi-neko Docker service, NEKO_* env vars, Neko Caddy blocks
- Refactor browser-manager.ts: remove Neko WebSocket/interactive mode
- Refactor browser.ts: remove Neko status checks and switch_mode
- Rename NekoBrowser.svelte → BrowserView.svelte (update CSS classes)
- Update GigiMainView.svelte import
- Clean up browser-control.html (remove Neko iframe/mode toggle)
- Rewrite docs/BROWSER.md for Chrome + CDP architecture
- Update docs/PLATFORM.md and docs/SELF_EXTENDING.md
- Delete docs/WEBRTC_TROUBLESHOOTING.md (no longer relevant)
- Update docs/HTTPS_TROUBLESHOOTING.md

Closes #118

Co-Authored-By: Gigi <gigi@ideabile.com>

--- a/Caddyfile
+++ b/Caddyfile
@@ -2,12 +2,11 @@
 # Replace hostnames and service names with your deployment values.
 #
 # Required DNS entries (or use env var overrides):
-#   BROWSER_DOMAIN → browser host
+#   BROWSER_DOMAIN → browser host (Chrome noVNC)
 #   GIGI_DOMAIN    → main Gigi host
-#   NEKO_DOMAIN    → Neko browser host (if using Neko)
 
 {$BROWSER_DOMAIN:browser.localhost} {
-	reverse_proxy {$GIGI_SERVICE:gigi_gigi-neko}:8080
+	reverse_proxy {$GIGI_CHROME_SERVICE:gigi_chrome}:6080
 }
 
 {$GIGI_DOMAIN:gigi.localhost} {
@@ -43,23 +42,4 @@
 		# Flush immediately for potential streaming responses
 		flush_interval -1
 	}
-}
-
-{$NEKO_DOMAIN:neko.localhost} {
-	# WebRTC signaling endpoint
-	@webrtc {
-		path /api/ws
-		header Connection *Upgrade*
-		header Upgrade websocket
-	}
-	reverse_proxy @webrtc {$GIGI_SERVICE:gigi_neko}:8080
-
-	# ICE candidates and session management
-	@api {
-		path /api/*
-	}
-	reverse_proxy @api {$GIGI_SERVICE:gigi_neko}:8080
-
-	# Static assets and main application
-	reverse_proxy {$GIGI_SERVICE:gigi_neko}:8080
 }
