--- a/.env.example
+++ b/.env.example
@@ -6,15 +6,9 @@ TAG=latest
 # Database Configuration
 DATABASE_URL=postgresql://gigi:password@postgres:5432/gigi
 
-# Neko Browser Configuration
-NEKO_PASSWORD=neko
-NEKO_ADMIN_PASSWORD=admin
-NEKO_SCREEN=1920x1080@30
-# CRITICAL: Set this to the external IP/hostname where neko is accessible for WebRTC
-NEKO_NAT1TO1=your-host-ip
-
-# Browser Mode Configuration
-BROWSER_MODE=neko
+# Chrome DevTools Protocol (CDP) — for browser automation via MCP
+# Set to the CDP WebSocket URL of your Chrome container
+# CHROME_CDP_URL=ws://chrome:9222
 
 # Vite Dev Proxy (for local frontend development)
 # Point these to the live Gigi app to develop against real data
