--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,44 +1,6 @@
 version: '3.9'
 
 services:
-  gigi-neko:
-    image: ghcr.io/m1k1o/neko/chromium
-    shm_size: "2gb"
-    ports:
-      - "52000-52100:52000-52100/udp"
-    environment:
-      NEKO_SCREEN: ${NEKO_SCREEN:-1920x1080@30}
-      NEKO_PASSWORD: ${NEKO_PASSWORD:-neko}
-      NEKO_PASSWORD_ADMIN: ${NEKO_ADMIN_PASSWORD:-admin}
-      NEKO_EPR: 52000-52100
-      NEKO_ICELITE: 1
-      NEKO_NAT1TO1: ${NEKO_NAT1TO1:-}
-      NEKO_ICESERVERS: '[{"urls":["stun:stun.l.google.com:19302"]},{"urls":["stun:stun1.l.google.com:19302"]}]'
-      NEKO_VIDEO_CODEC: h264
-      NEKO_VIDEO_BITRATE: 5000
-      NEKO_AUDIO_CODEC: opus
-    networks:
-      - gigi-network
-      - http-entry_default
-    volumes:
-      - browser-profiles:/home/neko/.config/chromium
-    cap_add:
-      - SYS_ADMIN
-    security_opt:
-      - seccomp:unconfined
-    healthcheck:
-      test: ["CMD-SHELL", "curl -sf http://localhost:8080/ || exit 1"]
-      interval: 30s
-      timeout: 10s
-      retries: 3
-      start_period: 40s
-    deploy:
-      replicas: 1
-      restart_policy:
-        condition: on-failure
-        delay: 5s
-        max_attempts: 3
-
   gigi:
     build:
       context: .
@@ -46,13 +8,8 @@ services:
     image: ${REGISTRY}/${IMAGE}:${TAG:-latest}
     container_name: gigi
     restart: unless-stopped
-    depends_on:
-      - gigi-neko
     environment:
-      BROWSER_MODE: ${BROWSER_MODE:-neko}
-      NEKO_HOST: gigi-neko
-      NEKO_PORT: 8080
-      NEKO_PASSWORD: ${NEKO_PASSWORD:-neko}
+      CHROME_CDP_URL: ${CHROME_CDP_URL:-}
       WS_PORT: 3001
       DATABASE_URL: ${DATABASE_URL}
       # Backup system — git mirror to secondary Gitea (optional)
@@ -107,5 +64,4 @@ networks:
     external: true
 
 volumes:
-  browser-profiles:
   workspace:
