--- a/.gitea/workflows/test.yml
+++ b/.gitea/workflows/test.yml
@@ -21,44 +21,6 @@ jobs:
         run: npx tsc --noEmit
 
       - name: Run tests
-        id: run-tests
-        run: |
-          npm test 2>&1 | tee test-output.log
-          exit_code=${PIPESTATUS[0]}
-          echo "exit_code=$exit_code" >> $GITHUB_OUTPUT
-          exit $exit_code
-        continue-on-error: true
+        run: npm test
         env:
           CI: true
-
-      - name: Upload test results
-        if: always()
-        uses: actions/upload-artifact@v4
-        with:
-          name: test-results
-          path: |
-            test-results/
-            coverage/
-          retention-days: 7
-
-      # Comment on PR when tests fail
-      - name: Comment on PR failure
-        if: steps.run-tests.outputs.exit_code != '0' && github.event_name == 'pull_request'
-        run: |
-          # Extract last 50 lines of test output
-          TEST_OUTPUT=$(tail -n 50 test-output.log | sed 's/"/\\"/g' | sed ':a;N;$!ba;s/\n/\\n/g')
-
-          # Create comment on PR mentioning @gigi
-          curl -X POST "${{ github.server_url }}/api/v1/repos/${{ github.repository }}/issues/${{ github.event.pull_request.number }}/comments" \
-            -H "Authorization: Bearer ${{ secrets.GITEA_TOKEN }}" \
-            -H "Content-Type: application/json" \
-            -d "{
-              \"body\": \"@gigi Tests failed on this PR! Please analyze the failures and fix them.\\n\\n<details>\\n<summary>Test output (last 50 lines)</summary>\\n\\n\`\`\`\\n${TEST_OUTPUT}\\n\`\`\`\\n</details>\\n\\nFull test logs are available in the workflow artifacts.\"
-            }"
-
-      # Fail the job if tests failed
-      - name: Check test results
-        if: steps.run-tests.outputs.exit_code != '0'
-        run: |
-          echo "Tests failed with exit code ${{ steps.run-tests.outputs.exit_code }}"
-          exit 1
