refactor: make system prompt configurable and templated
Extract the ~260-line hardcoded SYSTEM_PROMPT from agent.ts into a
configurable template system in lib/core/prompt.ts. The prompt is now
built dynamically from gigi.config.yaml values with {{placeholder}}
interpolation.

Key changes:
- New lib/core/prompt.ts: template engine, config loader, buildSystemPrompt()
- agent.ts: uses buildSystemPrompt() instead of hardcoded constant
- gigi.config.yaml: new `agent` section (name, description, org, git identity)
- gigi.config.example.yaml: documented example for new users
- Git identity now configurable via config instead of hardcoded
- Agent display name in message formatting uses config

All values have sensible defaults — existing setups work unchanged.

Closes #66

Co-Authored-By: Gigi <gigi@ideabile.com>

--- a/gigi.config.example.yaml
+++ b/gigi.config.example.yaml
@@ -1,4 +1,6 @@
-# Gigi Configuration
+# Gigi Configuration — Example
+#
+# Copy this to gigi.config.yaml and customize for your setup.
 # Secrets go in env vars, structure goes here.
 # Supports env var interpolation: ${VAR_NAME} and ${VAR_NAME:-default}
 
@@ -8,22 +10,26 @@
 
 agent:
   # Agent display name (used in prompts and git commits)
-  name: ${AGENT_NAME:-Gigi}
+  name: Gigi
   # Short description/role shown in the system prompt
-  description: ${AGENT_DESCRIPTION:-a persistent AI coordinator}
+  description: a persistent AI coordinator
   # Gitea organization for repo operations
   org: ${GITEA_ORG:-idea}
   # Git identity for commits
   git:
-    name: ${AGENT_GIT_NAME:-Gigi}
-    email: ${AGENT_GIT_EMAIL:-gigi@localhost}
+    name: Gigi
+    email: gigi@localhost
+  # Optional: Extra infrastructure context shown to the agent
+  # infrastructure: "3-node ARM64 cluster running Docker Swarm"
+  # Optional: Extra prompt sections appended to system prompt
+  # extra_sections: "## Custom Rules\n- Always use TypeScript\n- Follow project conventions"
 
 # ── Backup Configuration ─────────────────────────────────────────────
 
 backup:
   sources:
-    # Back up all repos in the "idea" org
-    - org: idea
+    # Back up all repos in the configured org
+    - org: ${GITEA_ORG:-idea}
 
   targets:
     # Git mirror to secondary Gitea (optional)
@@ -31,8 +37,8 @@ backup:
       name: git-mirror
       url: ${MIRROR_GIT_URL:-}
       auth: token
-      token: ${MIRROR_GIT_TOKEN}
-      api_token: ${MIRROR_GIT_TOKEN}
+      token: ${MIRROR_GIT_TOKEN:-}
+      api_token: ${MIRROR_GIT_TOKEN:-}
       create_repos: true
 
   schedule:
